Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96307

Issue with stopped particle system and startTime

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.2.0, 6.2
    • 6.2
    • Quick: 3D
    • None
    • 1
    • 09733170964f35d9dcfb5e436b9cefc390dddd26
    • Qt Quick 3D: Week 37-38

      Steps to reproduce:

      • Modify examples/quick3d/particles3d/qml/Snowing.qml and add "running: false" to psystem.
      • Run the example.
      • Adjust "Wander: globalAmount" slider.

      Expected: Particles adjust smootly.

      Actual: Particles jump around. The reason is that startTime gets re-applied with every refresh when the system is not running and some affector is modified.

        For Gerrit Dashboard: QTBUG-96307
        # Subject Branch Project Status CR V

            kagro Kaj Grönholm
            kagro Kaj Grönholm
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes