Fix particles startTime usage

Don't apply startTime to time as it can cause issues. Instead use
separate currentTime for the actual combined system time.

Pick-to: 6.2 6.2.0
Task-number: QTBUG-96307
Change-Id: I7c1136b44b8603460f143b9bfd97d45062055c26
Reviewed-by: Antti Määttä <antti.maatta@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Kaj Grönholm <kaj.gronholm@qt.io>